# tree-sitter-strace

./: Makefile  Package.swift  binding.gyp  package.json  pyproject.toml  setup.py
bindings/c/: tree-sitter-strace.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc
bindings/python/tree_sitter_strace/: __init__.py  binding.c
bindings/swift/TreeSitterStrace/: strace.h
src/: grammar.json  parser.c
